tests/baselines/reference/crashOnMethodSignatures.errors.txt
==== tests/cases/compiler/crashOnMethodSignatures.ts (1 errors) ====
    class A {
        a(completed: () => any): void;
        ~
!!! crashOnMethodSignatures.ts(2,5): error TS2238: Function implementation expected.
    }
    